Fourth official commit
Finished category page and implemented read more buttons. Made sample details page (still not sure if it is going to stay like this).

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -43,10 +43,17 @@ body, #root {
 
 .img {
   position: relative;
-  float: left;
-  width:  500px;
+  float: left;  
   height: 400px;
   background-position: 50% 50%;
   background-repeat:   no-repeat;
   background-size:     cover;
+}
+
+.img-center {
+  display: block;
+  margin-left: auto; 
+  margin-right: auto;
+  width:  50%;
+  height: 300px;
 }
